overlapping when menu is open was fixed

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,6 +3,7 @@
   background-size: cover;
   background-position: calc(100% + 90px);
   margin-bottom: 60px;
+  z-index: 1;
 
   @include onTablet {
     background-position: center;
